Camino only: Bug 183279 - Tabs don't have tooltips.  Patch by smorgan <stuart.morgan@alumni.case.edu> r=cl sr=smfr